--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Safario Travel - About</title>
+  <title>Hamza Mahdi Travel and Tourism - About Us</title>
 	<link rel="icon" href="img/Fevicon.png" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -57,7 +57,7 @@
             </ul>
 
             <div class="nav-right text-center text-lg-right py-4 py-lg-0">
-              <a class="button" href="#">Get Started</a>
+              <a class="button" href="https://wa.me/971525211231" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
             </div>
           </div> 
         </div>
@@ -73,7 +73,7 @@
     <div class="container">
       <div class="hero-banner-sm-content">
         <h1>About Us</h1>
-        <p>Air seed winged lights saw kind whales in sixth best a dont seas dron image so fish all tree on</p>
+        <p>Your trusted partner for UAE travel services - Dream • Travel • Repeat</p>
       </div>
     </div>
   </section>
@@ -90,9 +90,9 @@
           </div>
         </div>
         <div class="col-lg-5 col-md-6 align-self-center about-content">
-          <h2>Exploration is <br class="d-none d-xl-block"> really the essence <br class="d-none d-xl-block"> of the human spirit</h2>
-          <p>Make she'd moved divided air. Whose tree that replenish tone hath own upon them it multiply was blessed is lights make gathering so day dominion so creeping air was made.</p>
-          <a class="button" href="#">Learn More</a>
+          <h2>Welcome to <br class="d-none d-xl-block"> Hamza Mahdi <br class="d-none d-xl-block"> Travel & Tourism</h2>
+          <p>With years of experience in the travel industry, we specialize in providing comprehensive travel solutions for visitors to the United Arab Emirates. Our dedicated team, led by Manager Mohamed Faizal, ensures every client receives personalized service and the best travel deals.</p>
+          <a class="button" href="https://wa.me/971525211231" target="_blank">Contact Us</a>
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
       <div class="section-intro text-center pb-90px">
         <img class="section-intro-img" src="img/home/section-icon.png" alt="">
         <h2>Our client says</h2>
-        <p>Fowl have fruit moveth male they are that place you will lesser</p>
+        <p>What our satisfied customers say about our services</p>
       </div>
 
 
@@ -120,9 +120,9 @@
             </div>
             <div class="col-md-9 col-lg-10">
               <div class="testimonial__content mt-3 mt-sm-0">
-                <h3>Daniel heart</h3>
-                <p>Project manager, Nestle</p>
-                <p class="testimonial__i">Also made from. Give may saying meat there from heaven it lights face had is gathered god earth light for life may itself shall whales made they're blessed whales also made from give may saying meat. There from heaven it lights face had</p>
+                <h3>Ahmed Hassan</h3>
+                <p>Business Owner, Dubai</p>
+                <p class="testimonial__i">Hamza Mahdi Travel made our family visit visa process incredibly smooth. They handled everything professionally and got our visas approved in just 3 days. Their team is knowledgeable, responsive, and truly cares about their clients. Highly recommended!</p>
                 <span class="testimonial__icon"><i class="ti-quote-right"></i></span>
               </div>
             </div>
@@ -137,9 +137,9 @@
             </div>
             <div class="col-md-9 col-lg-10">
               <div class="testimonial__content mt-3 mt-sm-0">
-                <h3>Daniel heart</h3>
-                <p>Project manager, Nestle</p>
-                <p class="testimonial__i">Also made from. Give may saying meat there from heaven it lights face had is gathered god earth light for life may itself shall whales made they're blessed whales also made from give may saying meat. There from heaven it lights face had</p>
+                <h3>Sarah Mohammed</h3>
+                <p>Travel Enthusiast</p>
+                <p class="testimonial__i">I booked my Dubai tour package through Hamza Mahdi Travel and it was an amazing experience. From the desert safari to the city tour, everything was perfectly organized. The prices were very competitive and the service exceeded my expectations.</p>
                 <span class="testimonial__icon"><i class="ti-quote-right"></i></span>
               </div>
             </div>
@@ -154,9 +154,9 @@
             </div>
             <div class="col-md-9 col-lg-10">
               <div class="testimonial__content mt-3 mt-sm-0">
-                <h3>Daniel heart</h3>
-                <p>Project manager, Nestle</p>
-                <p class="testimonial__i">Also made from. Give may saying meat there from heaven it lights face had is gathered god earth light for life may itself shall whales made they're blessed whales also made from give may saying meat. There from heaven it lights face had</p>
+                <h3>Rajesh Kumar</h3>
+                <p>IT Professional</p>
+                <p class="testimonial__i">Best travel agency for flight bookings! They really deliver on their promise of lowest rates. I saved significantly on my international flights. Their WhatsApp support is very responsive and helpful. Will definitely use their services again.</p>
                 <span class="testimonial__icon"><i class="ti-quote-right"></i></span>
               </div>
             </div>
@@ -168,104 +168,36 @@
   <!--================Testimonial section End =================-->
 
 
-  <!--================Search Package section Start =================-->
-  <section class="section-margin">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-6 col-xl-5 align-self-center mb-5 mb-lg-0">
-          <div class="search-content">
-            <h2>Search suitable <br class="d-none d-xl-block"> and affordable plan <br class="d-none d-xl-block"> for your tour</h2>
-            <p>Make she'd moved divided air. Whose tree that replenish tone hath own upon them it multiply was blessed is lights make gathering so day dominion so creeping</p>
-            <a class="button" href="#">Learn More</a>
-          </div>
-        </div>
-        <div class="col-lg-6 col-xl-6 offset-xl-1">
-          <div class="search-wrapper">
-            <h3>Search Package</h3>
-
-            <form class="search-form" action="#">
-              <div class="form-group">
-                <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Recipient's username">
-                  <div class="input-group-append">
-                    <span class="input-group-text"><i class="ti-search"></i></span>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <select name="category" id="category">
-                  <option value="disabled" disabled selected>Category</option>
-                  <option value="8 AM">8 AM</option>
-                  <option value="12 PM">12 PM</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <select name="tourDucation" id="tourDuration">
-                  <option value="disabled" disabled selected>Tour duration</option>
-                  <option value="8 AM">8 AM</option>
-                  <option value="12 PM">12 PM</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <div class="input-group">
-                  <input type="date" class="form-control">
-                  <div class="input-group-append">
-                    <span class="input-group-text"><i class="ti-notepad"></i></span>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <select name="priceRange" id="priceRange">
-                  <option value="disabled" disabled selected>Price range</option>
-                  <option value="8 AM">8 AM</option>
-                  <option value="12 PM">12 PM</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <button class="button border-0 mt-3" type="submit">Search Package</button>
-              </div>
-            </form>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </section>
-  <!--================Search Package section End =================-->
-
-
-
-
   <!-- ================ start footer Area ================= -->
   <footer class="footer-area">
     <div class="container">
       <div class="row">
         <div class="col-lg-3  col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>About Agency</h6>
+            <h6>About Hamza Mahdi Travel</h6>
             <p>
-              The world has become so fast paced that people don’t want to stand by reading a page of information to be  they would much rather look at a presentation and understand
+              Your trusted partner for UAE visit visas and travel services. We specialize in providing quick visa processing, affordable flight bookings, and memorable tour packages across the United Arab Emirates.
             </p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>Navigation Links</h6>
+            <h6>Quick Links</h6>
             <div class="row">
               <div class="col">
                 <ul>
                   <li><a href="#">Home</a></li>
-                  <li><a href="#">Feature</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="#">Visit Visa</a></li>
+                  <li><a href="#">Flight Booking</a></li>
+                  <li><a href="#">Dubai Tours</a></li>
                 </ul>
               </div>
               <div class="col">
                 <ul>
-                  <li><a href="#">Team</a></li>
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">About Us</a></li>
                   <li><a href="#">Contact</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">FAQ</a></li>
                 </ul>
               </div>										
             </div>							
@@ -273,48 +205,39 @@
         </div>							
         <div class="col-lg-3  col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>Newsletter</h6>
-            <p>
-              For business professionals caught between high OEM price and mediocre print and graphic output.									
-            </p>								
-            <div id="mc_embed_signup">
-              <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
-                <div class="input-group d-flex flex-row">
-                  <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-                  <button class="btn bb-btn"><span class="lnr lnr-location"></span></button>		
-                </div>									
-                <div class="mt-10 info"></div>
-              </form>
-            </div>
+            <h6>Contact Info</h6>
+            <p><i class="fas fa-phone"></i> +971 52 521 1231 (WhatsApp)</p>
+            <p><i class="fas fa-phone"></i> 054 5477 880 | 054 3219 653</p>
+            <p><i class="fas fa-phone"></i> (04) 577 1318</p>
+            <p><i class="fas fa-envelope"></i> info@hmtours.net</p>
+            <p><i class="fas fa-globe"></i> www.hmtours.net</p>
           </div>
         </div>
         <div class="col-lg-3  col-md-6 col-sm-6">
-          <div class="single-footer-widget mail-chimp">
-            <h6 class="mb-20">InstaFeed</h6>
-            <ul class="instafeed d-flex flex-wrap">
-              <li><img src="img/instagram/i1.jpg" alt=""></li>
-              <li><img src="img/instagram/i2.jpg" alt=""></li>
-              <li><img src="img/instagram/i3.jpg" alt=""></li>
-              <li><img src="img/instagram/i4.jpg" alt=""></li>
-              <li><img src="img/instagram/i5.jpg" alt=""></li>
-              <li><img src="img/instagram/i6.jpg" alt=""></li>
-              <li><img src="img/instagram/i7.jpg" alt=""></li>
-              <li><img src="img/instagram/i8.jpg" alt=""></li>
-            </ul>
+          <div class="single-footer-widget">
+            <h6>Visit Our Office</h6>
+            <p>
+              Shop no 44 / Hamda building 3<br>
+              Near manal al madina<br>
+              Frij murar, Deira, Dubai<br>
+              United Arab Emirates
+            </p>
+            <div class="mt-3">
+              <a href="https://wa.me/971525211231" target="_blank" class="button button-hero"><i class="fab fa-whatsapp"></i> WhatsApp Us</a>
+            </div>
           </div>
         </div>						
       </div>
 
       <div class="footer-bottom">
         <div class="row align-items-center">
-          <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left">
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Hamza Mahdi Travel and Tourism. All rights reserved.</p>
           <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-dribbble"></i></a>
-            <a href="#"><i class="fab fa-behance"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/971525211231" target="_blank"><i class="fab fa-whatsapp"></i></a>
           </div>
         </div>
       </div>
