--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Safario Travel - Contact</title>
+  <title>Hamza Mahdi Travel and Tourism - Contact Us</title>
 	<link rel="icon" href="img/Fevicon.png" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -58,7 +58,7 @@
             </ul>
 
             <div class="nav-right text-center text-lg-right py-4 py-lg-0">
-              <a class="button" href="#">Get Started</a>
+              <a class="button" href="https://wa.me/971525211231" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
             </div>
           </div> 
         </div>
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="hero-banner-sm-content">
         <h1>Contact Us</h1>
-        <p>Air seed winged lights saw kind whales in sixth best a dont seas dron image so fish all tree on</p>
+        <p>Get in touch with us for UAE Visit Visa, Flight Bookings & Dubai Tours</p>
       </div>
     </div>
   </section>
@@ -89,7 +89,8 @@
         <div id="map" style="height: 480px;"></div>
         <script>
           function initMap() {
-            var uluru = {lat: -25.363, lng: 131.044};
+            // Hamza Mahdi Travel location in Deira, Dubai
+            var hamzaLocation = {lat: 25.2653, lng: 55.3089};
             var grayStyles = [
               {
                 featureType: "all",
@@ -101,10 +102,16 @@
               {elementType: 'labels.text.fill', stylers: [{color: '#A3A3A3'}]}
             ];
             var map = new google.maps.Map(document.getElementById('map'), {
-              center: {lat: -31.197, lng: 150.744},
-              zoom: 9,
+              center: hamzaLocation,
+              zoom: 15,
               styles: grayStyles,
               scrollwheel:  false
+            });
+            
+            var marker = new google.maps.Marker({
+              position: hamzaLocation,
+              map: map,
+              title: 'Hamza Mahdi Travel and Tourism'
             });
           }
           
@@ -119,26 +126,28 @@
           <h2 class="contact-title">Get in Touch</h2>
         </div>
         <div class="col-lg-8">
-          <form class="form-contact contact_form" action="contact_process.php" method="post" id="contactForm" novalidate="novalidate">
+          <!-- Using Formspree for form submission (free service for GitHub Pages) -->
+          <!-- Replace YOUR_FORMSPREE_ID with your actual Formspree form ID -->
+          <form class="form-contact contact_form" action="https://formspree.io/f/YOUR_FORMSPREE_ID" method="POST" id="contactForm">
             <div class="row">
               <div class="col-12">
                 <div class="form-group">
-                    <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
+                    <textarea class="form-control w-100" name="message" id="message" cols="30" rows="9" placeholder="Enter Message" required></textarea>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
-                  <input class="form-control" name="name" id="name" type="text" placeholder="Enter your name">
+                  <input class="form-control" name="name" id="name" type="text" placeholder="Enter your name" required>
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="form-group">
-                  <input class="form-control" name="email" id="email" type="email" placeholder="Enter email address">
+                  <input class="form-control" name="email" id="email" type="email" placeholder="Enter email address" required>
                 </div>
               </div>
               <div class="col-12">
                 <div class="form-group">
-                  <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject">
+                  <input class="form-control" name="subject" id="subject" type="text" placeholder="Enter Subject" required>
                 </div>
               </div>
             </div>
@@ -147,6 +156,13 @@
             </div>
           </form>
 
+          <!-- Alternative: Direct WhatsApp Contact -->
+          <div class="text-center mt-4">
+            <p class="mb-3">Or contact us directly on WhatsApp for immediate assistance:</p>
+            <a href="https://wa.me/971525211231" target="_blank" class="button button-hero">
+              <i class="fab fa-whatsapp"></i> Chat on WhatsApp
+            </a>
+          </div>
 
         </div>
 
@@ -154,22 +170,33 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>Buttonwood, California.</h3>
-              <p>Rosemead, CA 91770</p>
+              <h3>Dubai, UAE</h3>
+              <p>Shop no 44 / Hamda building 3<br>
+              Near manal al madina<br>
+              Frij murar, Deira, Dubai</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-tablet"></i></span>
             <div class="media-body">
-              <h3><a href="tel:454545654">00 (440) 9865 562</a></h3>
-              <p>Mon to Fri 9am to 6pm</p>
+              <h3><a href="tel:+971525211231">+971 52 521 1231</a></h3>
+              <p>054 5477 880 | 054 3219 653<br>
+              (04) 577 1318<br>
+              Mon to Sat 9am to 9pm</p>
             </div>
           </div>
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-email"></i></span>
             <div class="media-body">
-              <h3><a href="mailto:support@colorlib.com">support@colorlib.com</a></h3>
+              <h3><a href="mailto:info@hmtours.net">info@hmtours.net</a></h3>
               <p>Send us your query anytime!</p>
+            </div>
+          </div>
+          <div class="media contact-info">
+            <span class="contact-info__icon"><i class="ti-world"></i></span>
+            <div class="media-body">
+              <h3><a href="http://www.hmtours.net" target="_blank">www.hmtours.net</a></h3>
+              <p>Visit our website</p>
             </div>
           </div>
         </div>
@@ -188,30 +215,30 @@
       <div class="row">
         <div class="col-lg-3  col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>About Agency</h6>
+            <h6>About Hamza Mahdi Travel</h6>
             <p>
-              The world has become so fast paced that people don’t want to stand by reading a page of information to be  they would much rather look at a presentation and understand
+              Your trusted partner for UAE visit visas and travel services. We specialize in providing quick visa processing, affordable flight bookings, and memorable tour packages across the United Arab Emirates.
             </p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>Navigation Links</h6>
+            <h6>Quick Links</h6>
             <div class="row">
               <div class="col">
                 <ul>
                   <li><a href="#">Home</a></li>
-                  <li><a href="#">Feature</a></li>
-                  <li><a href="#">Services</a></li>
-                  <li><a href="#">Portfolio</a></li>
+                  <li><a href="#">Visit Visa</a></li>
+                  <li><a href="#">Flight Booking</a></li>
+                  <li><a href="#">Dubai Tours</a></li>
                 </ul>
               </div>
               <div class="col">
                 <ul>
-                  <li><a href="#">Team</a></li>
-                  <li><a href="#">Pricing</a></li>
-                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">About Us</a></li>
                   <li><a href="#">Contact</a></li>
+                  <li><a href="#">Blog</a></li>
+                  <li><a href="#">FAQ</a></li>
                 </ul>
               </div>										
             </div>							
@@ -219,48 +246,39 @@
         </div>							
         <div class="col-lg-3  col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>Newsletter</h6>
-            <p>
-              For business professionals caught between high OEM price and mediocre print and graphic output.									
-            </p>								
-            <div id="mc_embed_signup">
-              <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscription relative">
-                <div class="input-group d-flex flex-row">
-                  <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
-                  <button class="btn bb-btn"><span class="lnr lnr-location"></span></button>		
-                </div>									
-                <div class="mt-10 info"></div>
-              </form>
-            </div>
+            <h6>Contact Info</h6>
+            <p><i class="fas fa-phone"></i> +971 52 521 1231 (WhatsApp)</p>
+            <p><i class="fas fa-phone"></i> 054 5477 880 | 054 3219 653</p>
+            <p><i class="fas fa-phone"></i> (04) 577 1318</p>
+            <p><i class="fas fa-envelope"></i> info@hmtours.net</p>
+            <p><i class="fas fa-globe"></i> www.hmtours.net</p>
           </div>
         </div>
         <div class="col-lg-3  col-md-6 col-sm-6">
-          <div class="single-footer-widget mail-chimp">
-            <h6 class="mb-20">InstaFeed</h6>
-            <ul class="instafeed d-flex flex-wrap">
-              <li><img src="img/instagram/i1.jpg" alt=""></li>
-              <li><img src="img/instagram/i2.jpg" alt=""></li>
-              <li><img src="img/instagram/i3.jpg" alt=""></li>
-              <li><img src="img/instagram/i4.jpg" alt=""></li>
-              <li><img src="img/instagram/i5.jpg" alt=""></li>
-              <li><img src="img/instagram/i6.jpg" alt=""></li>
-              <li><img src="img/instagram/i7.jpg" alt=""></li>
-              <li><img src="img/instagram/i8.jpg" alt=""></li>
-            </ul>
+          <div class="single-footer-widget">
+            <h6>Visit Our Office</h6>
+            <p>
+              Shop no 44 / Hamda building 3<br>
+              Near manal al madina<br>
+              Frij murar, Deira, Dubai<br>
+              United Arab Emirates
+            </p>
+            <div class="mt-3">
+              <a href="https://wa.me/971525211231" target="_blank" class="button button-hero"><i class="fab fa-whatsapp"></i> WhatsApp Us</a>
+            </div>
           </div>
         </div>						
       </div>
 
       <div class="footer-bottom">
         <div class="row align-items-center">
-          <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          <p class="col-lg-8 col-sm-12 footer-text m-0 text-center text-lg-left">
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> Hamza Mahdi Travel and Tourism. All rights reserved.</p>
           <div class="col-lg-4 col-sm-12 footer-social text-center text-lg-right">
             <a href="#"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-dribbble"></i></a>
-            <a href="#"><i class="fab fa-behance"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://wa.me/971525211231" target="_blank"><i class="fab fa-whatsapp"></i></a>
           </div>
         </div>
       </div>
